syntax = "proto3";

package indexer;

option go_package = "github.com/ethpandaops/tracoor/pkg/proto/tracoor/indexer";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message BeaconState {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue node = 2;
  google.protobuf.Timestamp fetched_at = 3 [json_name = "fetched_at"];
  google.protobuf.UInt64Value slot = 4;
  google.protobuf.UInt64Value epoch = 5;
  google.protobuf.StringValue state_root = 6 [json_name = "state_root"];
  google.protobuf.StringValue node_version = 7 [json_name = "node_version"];
  google.protobuf.StringValue location = 8;
  google.protobuf.StringValue network = 9;
  google.protobuf.StringValue beacon_implementation = 10 [json_name = "beacon_implementation"];
}

service Indexer {
  rpc GetStorageHandshakeToken(GetStorageHandshakeTokenRequest) returns (GetStorageHandshakeTokenResponse) {}
  // BeaconState
  rpc CreateBeaconState(CreateBeaconStateRequest) returns (CreateBeaconStateResponse) {}
  rpc ListBeaconState(ListBeaconStateRequest) returns (ListBeaconStateResponse) {}
  rpc ListUniqueBeaconStateValues(ListUniqueBeaconStateValuesRequest) returns (ListUniqueBeaconStateValuesResponse) {}
}

message GetStorageHandshakeTokenRequest {
  string node = 1;
  string token = 2;
}

message GetStorageHandshakeTokenResponse {
  string token = 1;
}

message CreateBeaconStateRequest {
  google.protobuf.StringValue node = 1;
  google.protobuf.Timestamp fetched_at = 2 [json_name = "fetched_at"];
  google.protobuf.UInt64Value slot = 3;
  google.protobuf.UInt64Value epoch = 4;
  google.protobuf.StringValue state_root = 5 [json_name = "state_root"];
  google.protobuf.StringValue node_version = 6 [json_name = "node_version"];
  google.protobuf.StringValue location = 7;
  google.protobuf.StringValue network = 8;
  google.protobuf.StringValue beacon_implementation = 9 [json_name = "beacon_implementation"];
}

message CreateBeaconStateResponse {
  google.protobuf.StringValue id = 1;
}

message ListUniqueBeaconStateValuesRequest {
  enum Field {
    NODE = 0;
    SLOT = 1;
    EPOCH = 2;
    STATE_ROOT = 3;
    NODE_VERSION = 4;
    LOCATION = 5;
    NETWORK = 6;
    BEACON_IMPLEMENTATION = 7;
  }
  repeated Field fields = 1;
}

message ListUniqueBeaconStateValuesResponse {
  repeated string node = 1;
  repeated uint64 slot = 2;
  repeated uint64 epoch = 3;
  repeated string state_root = 4 [json_name = "state_root"];
  repeated string node_version = 5 [json_name = "node_version"];
  repeated string location = 6;
  repeated string network = 7;
  repeated string beacon_implementation = 8 [json_name = "beacon_implementation"];
}

message ListBeaconStateRequest {
  string node = 1;
  uint64 slot = 2;
  uint64 epoch = 3;
  string state_root = 4 [json_name = "state_root"];
  string node_version = 5 [json_name = "node_version"];
  string location = 6;
  string network = 7;
  google.protobuf.Timestamp before = 8;
  google.protobuf.Timestamp after = 9;

  PaginationCursor pagination = 10;
  string id = 11;
  string beacon_implementation = 12 [json_name = "beacon_implementation"];
}

message ListBeaconStateResponse {
  repeated BeaconState beacon_states = 1;
}

message PaginationCursor {
  int32 limit = 1;
  int32 offset = 2;
  string order_by = 3;
}